include folders as module in orpheus
Change-Id: Iced1b03ca6423719c0f908493c6178038af35ff3