@@ -16,6 +16,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'robolectric'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -42,6 +43,21 @@ android {
     }
 }
 
+robolectric {
+    include '**/*Test.class'
+}
+// hack for robolectric
+// https://github.com/JakeWharton/gradle-android-test-plugin/issues/54
+tasks.whenTaskAdded { task ->
+    if (task.name == 'testDebug') {
+        task.jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+        // use afterTest to listen to the test execution results
+        afterTest { descriptor, result ->
+            println "Executing test for {$descriptor.name} with result: ${result.resultType}"
+        }
+    }
+}
+
 // for uploadArchives
 group "org.opensilk.music.plugin"
 version android.defaultConfig.versionName
@@ -49,5 +65,33 @@ apply from: '../../maven_local.gradle'
 
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':common')
+    //compile 'commons-io:commons-io:2.4'
+
+    //For Standalone
+    //compile project(':common')
+
+    //When included in Orpheus
+    compile project(':api')
+    compile 'io.reactivex:rxandroid:0.22.0'
+
+    androidTestCompile('junit:junit:4.11')
+    androidTestCompile('org.robolectric:robolectric:2.3') {
+        exclude module: 'classworlds'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+    }
+    androidTestCompile('com.squareup:fest-android:1.0.0')
+    androidTestCompile('org.mockito:mockito-core:1.10.0')
 }
